Fixed slider overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -698,6 +698,10 @@
     }
 }
 
+.fourth-section-wrapper {
+    overflow-x: hidden;
+}
+
 .fourth-section {
     z-index: 1;
     padding: 24px 0;
